fix flex problem on ios webkit

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -299,3 +299,7 @@ footer{
 @import 'layout-page--contactus';
 
 @import 'small';
+
+[class*="reverse"] > * {
+    flex: 1;
+}
